--- a/examples/rest/client/conf/chassis.yaml
+++ b/examples/rest/client/conf/chassis.yaml
@@ -4,3 +4,7 @@ cse:
   service:
     registry:
       address: http://127.0.0.1:30100
+handler:
+  chain:
+    Consumer:
+      default: skywalking-consumer
